fix z-index

--- a/app/assets/stylesheets/layouts/global.sass
+++ b/app/assets/stylesheets/layouts/global.sass
@@ -11,7 +11,7 @@ body
     position: absolute
     height: 100%
     width: 100%
-    z-index: 5
+    z-index: 0
 
   .container
     min-width: $min_width
