--- a/app/assets/stylesheets/layouts/left_menu.sass
+++ b/app/assets/stylesheets/layouts/left_menu.sass
@@ -12,7 +12,7 @@ $left_menu_width: 300px
   position: absolute
   top: 0
   width: $left_menu_width
-  z-index: 6
+  z-index: 1
 
   &.active
     left: 0
